<resources>
    <!--General Propose -->
    <string name="email">email</string>
    <string name="password">password</string>
    <!-- Login Strings -->
    <string name="app_name">Fichapp</string>
    <string name="login_loginText">Login</string>
    <string name="login_forgot_password">Forgot password?</string>
    <!--Register Strings -->
    <string name="register_title">Register</string>
    <string name="register_company">Company name</string>
    <string name="register_repeatPassword">Repeat password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
